viewbinding using for xml inflating now

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -1,6 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_graph"
+    app:startDestination="@id/heroFragment">
 
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="hakandindis.lancer.ui.home.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/home_to_hero"
+            app:destination="@id/heroFragment" />
+        <action
+            android:id="@+id/home_to_team"
+            app:destination="@id/teamFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/heroFragment"
+        android:name="hakandindis.lancer.ui.hero.HeroFragment"
+        android:label="fragment_hero"
+        tools:layout="@layout/fragment_hero" >
+        <argument
+            android:name="hero"
+            app:argType="hakandindis.lancer.data.model.Hero" />
+    </fragment>
+    <fragment
+        android:id="@+id/teamFragment"
+        android:name="hakandindis.lancer.ui.team.TeamFragment"
+        android:label="fragment_team"
+        tools:layout="@layout/fragment_team" >
+        <argument
+            android:name="team"
+            app:argType="hakandindis.lancer.data.model.Team" />
+    </fragment>
 </navigation>
