saved_fragment added to navigation

--- a/app/src/main/res/layout/hero_item.xml
+++ b/app/src/main/res/layout/hero_item.xml
@@ -2,12 +2,11 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
     app:cardCornerRadius="10dp"
-    app:cardElevation="10dp"
-    app:contentPadding="12dp">
+    app:cardElevation="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,8 +14,11 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/hero_img"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:minWidth="100dp"
+            android:scaleType="fitXY"
+            android:minHeight="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:contentDescription="image"
             app:layout_constraintBottom_toTopOf="@+id/name_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -25,20 +27,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             tools:srcCompat="@tools:sample/avatars" />
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/attribute_img"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:maxWidth="10dp"
-            android:maxHeight="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/hero_img"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.156"
-            tools:src="@drawable/strength" />
 
         <TextView
             android:id="@+id/name_text"
@@ -52,10 +40,10 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/attack_type_text"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.148"
+            app:layout_constraintHorizontal_bias="0.085"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/attack_type_text"
-            tools:text="TextView" />
+            tools:text="Anti Mage" />
 
         <TextView
             android:id="@+id/attack_type_text"
@@ -63,10 +51,10 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.151"
+            app:layout_constraintHorizontal_bias="0.08"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/name_text"
-            tools:text="TextView" />
+            tools:text="Melee" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
