--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -10,29 +10,20 @@
         android:name="hakandindis.lancer.ui.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/home_to_hero"
-            app:destination="@id/heroFragment" />
-        <action
-            android:id="@+id/home_to_team"
-            app:destination="@id/teamFragment" />
     </fragment>
     <fragment
         android:id="@+id/heroFragment"
         android:name="hakandindis.lancer.ui.hero.HeroFragment"
         android:label="fragment_hero"
-        tools:layout="@layout/fragment_hero" >
-        <argument
-            android:name="hero"
-            app:argType="hakandindis.lancer.data.model.Hero" />
-    </fragment>
+        tools:layout="@layout/fragment_hero" />
     <fragment
         android:id="@+id/teamFragment"
         android:name="hakandindis.lancer.ui.team.TeamFragment"
         android:label="fragment_team"
-        tools:layout="@layout/fragment_team" >
-        <argument
-            android:name="team"
-            app:argType="hakandindis.lancer.data.model.Team" />
-    </fragment>
+        tools:layout="@layout/fragment_team" />
+    <fragment
+        android:id="@+id/savedFragment"
+        android:name="hakandindis.lancer.ui.saved.SavedFragment"
+        android:label="fragment_saved"
+        tools:layout="@layout/fragment_saved" />
 </navigation>
