--- a/app/src/main/res/layout/saved_hero_item.xml
+++ b/app/src/main/res/layout/saved_hero_item.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="10dp">
 
     <LinearLayout
@@ -48,11 +48,13 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/first_role_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Carry" />
 
             <TextView
+                android:id="@+id/second_role_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
