--- a/app/src/main/res/layout/saved_hero_item.xml
+++ b/app/src/main/res/layout/saved_hero_item.xml
@@ -12,6 +12,7 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/hero_img"
+            android:minHeight="150dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="fitXY"
