--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -33,7 +33,14 @@
         android:id="@+id/savedFragment"
         android:name="hakandindis.lancer.ui.saved.SavedFragment"
         android:label="fragment_saved"
-        tools:layout="@layout/fragment_saved" />
+        tools:layout="@layout/fragment_saved" >
+        <action
+            android:id="@+id/saved_to_hero_detail"
+            app:destination="@id/heroDetailFragment" />
+        <action
+            android:id="@+id/saved_to_team_detail"
+            app:destination="@id/teamDetailFragment" />
+    </fragment>
     <fragment
         android:id="@+id/teamDetailFragment"
         android:name="hakandindis.lancer.ui.team.TeamDetailFragment"
