--- a/app/src/main/res/menu/home_nav_menu.xml
+++ b/app/src/main/res/menu/home_nav_menu.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/heroFragment"
+        android:id="@+id/homeFragment"
         android:enabled="true"
-        android:icon="@drawable/strength"
+        android:icon="@drawable/home"
         android:title="home" />
-
-    <item
-        android:id="@+id/teamFragment"
-        android:enabled="true"
-        android:icon="@drawable/agility"
-        android:title="Team" />
 
     <item
         android:id="@+id/savedFragment"
         android:enabled="true"
-        android:icon="@drawable/intelligence"
+        android:icon="@drawable/saved_off"
         android:title="Saved" />
 
 </menu>
